--- a/package.json
+++ b/package.json
@@ -29,19 +29,15 @@
   "dependencies": {
     "@hapi/boom": "9.1.0",
     "body-parser": "1.19.0",
-    "camelize": "^1.0.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
     "mysql2": "2.3.0",
-    "shelljs": "0.8.5",
-    "sinon-chai": "^3.7.0",
-    "snakeize": "^0.1.0"
+    "shelljs": "0.8.5"
   },
   "devDependencies": {
     "chai": "4.3.4",
-    "chai-http": "4.3",
     "eslint-config-trybe-backend": "1.0.4",
     "frisby": "2.1.2",
     "jest": "26.4.1",
